--- a/ibtt/templates/base.html
+++ b/ibtt/templates/base.html
@@ -12,30 +12,14 @@
     <link href="../static/css/ibtt-style.css" rel="stylesheet" type="text/css">
     <link href="../static/css/bootstrap-extend.css" rel="stylesheet" type="text/css">
     <link href="../static/css/animate.css" rel="stylesheet" type="text/css">
-    <style>
-        .headroom {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            transition: all .2s ease-in-out;
-        }
-
-        .headroom--unpinned {
-            top: -100px;
-        }
-
-        .headroom--pinned {
-            top: 0;
-        }
-    </style>
-
+    <link href="../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
     {% block stylesheet %}{% endblock %}
     {#    <script src="../static/js/require.config.js"></script>#}
     <script src="../static/js/jquery-2.1.3.js"></script>
     <script src="../static/js/bootstrap.js"></script>
     <script src="../static/js/headroom.js"></script>
     <script src="../static/js/jQuery.headroom.min.js"></script>
+    <script src="../static/js/ibtt.global.js"></script>
     {% block base-script %}{% endblock %}
 </head>
 <body>
