--- a/ibtt/templates/home.html
+++ b/ibtt/templates/home.html
@@ -24,7 +24,7 @@
                             {#                            </button>#}
                             <a href="#" class="btn btn-outline" data-toggle="modal"
                                data-target="#loginModal">登录</a>
-                            <a href="#" class="btn btn-outline" data-toggle="modal"
+                            <a href="#" id="header_register_a" class="btn btn-outline" data-toggle="modal"
                                data-target="#register-modal">注册</a>
                             <a id="drop6" href="#" class="dropdown-toggle btn btn-outline" data-toggle="dropdown"
                                aria-haspopup="true" role="button" aria-expanded="false">
