--- a/ibtt/templates/base.html
+++ b/ibtt/templates/base.html
@@ -19,6 +19,11 @@
     <script src="../static/js/bootstrap.js"></script>
     <script src="../static/js/headroom.js"></script>
     <script src="../static/js/jQuery.headroom.min.js"></script>
+    <script src="../static/js/bootstrap-datetimepicker.js" type="text/javascript"></script>
+    <script src="../static/js/locales/bootstrap-datetimepicker.zh-CN.js" type="text/javascript"></script>
+    <script src="../static/js/jquery-validate.js" type="text/javascript"></script>
+    <script src="../static/js/jquery.form.js" type="text/javascript"></script>
+
     <script src="../static/js/ibtt.global.js"></script>
     {% block base-script %}{% endblock %}
 </head>
