--- a/ibtt/templates/login.html
+++ b/ibtt/templates/login.html
@@ -10,8 +10,8 @@
         <div class="form-group">
             <label for="username" class="col-sm-2 control-label">登录名</label>
             <div class="col-sm-9">
-                <input type="text" id="username" name="username" class="form-control" placeholder="手机/邮箱/用户名"
-                       data-required autofocus>
+                <input type="text" id="username" name="username" class="form-control"  placeholder="手机/邮箱/用户名"
+                       data-required autofocus data-pattern="([a-zA-Z0-9_-])+@([a-zA-Z0-9_-])+(.[a-zA-Z0-9_-])|(1[3|5|7|8|][0-9]{9})|(\w{5,30})">
             </div>
         </div>
         <div class="form-group">
