--- a/ibtt/templates/register.html
+++ b/ibtt/templates/register.html
@@ -12,21 +12,21 @@
 
                     <div class="col-sm-9">
                         <input type="text" id="username" name="username" class="form-control" placeholder="用户名"
-                               data-required  autofocus>
+                               data-required autofocus data-trim>
                     </div>
                 </div>
                 <div class="form-group" style="display: block;">
                     <label for="email" class="col-sm-2 control-label">Email</label>
                     <div class="col-sm-9">
                         <input type="text" id="email" name="email" class="form-control" placeholder="电子邮箱"
-                               data-required>
+                               data-required data-trim>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="username" class="col-sm-2 control-label">密码</label>
                     <div class="col-sm-9">
                         <input type="text" id="username" name="username" class="form-control" placeholder="密码"
-                               data-required>
+                               data-required data-trim>
                     </div>
                 </div>
                 <br/>
@@ -142,6 +142,4 @@
 {% endblock %}
 {% block modal-script %}
     <script src="../static/js/register.js" type="text/javascript"></script>
-    <script src="../static/js/bootstrap-datetimepicker.js" type="text/javascript"></script>
-    <script src="../static/js/locales/bootstrap-datetimepicker.zh-CN.js" type="text/javascript"></script>
 {% endblock %}
